Fix wrapping on IE 9

--- a/imp/themes/default/dynamic/screen.css
+++ b/imp/themes/default/dynamic/screen.css
@@ -704,6 +704,7 @@ a.address:hover img {
 #mailboxLabel {
     float: right;
     margin-left: 20px;
+    white-space: nowrap;
 }
 
 #searchbar {
